# Roingine3D

./: .clang-format  .clangd  .gitignore  .gitmodules  .lazy.lua  CMakeLists.txt  shaders.lua  xmake.lua
.github/workflows/: clang-format-check.yml  cmake-multi-platform.yml
assets/: .gitignore
scripts/: copy-assets.cmake
src/: application.cpp  application.h  constants.h  engine.cpp  engine.h  game.cpp  game.h  gameobject.cpp  gameobject.h  main.cpp  scene.cpp  scene.h  setup.cpp  texture_store.cpp  texture_store.h  types.cpp  types.h
src/api_internal/math/: quaternion.cpp  quaternion_utils.h  vec_utils.cpp  vec_utils.h
src/commands/: cam_adjust_command.cpp  cam_adjust_command.h  command.h  move_command.cpp  move_command.h
src/components/: camera.cpp  camera.h  component.h  entity.cpp  entity.h  mesh_renderer.cpp  mesh_renderer.h  player.cpp  player.h  transform.cpp  transform.h
src/game/: audio_rt_game.cpp  audio_rt_game.h  game_main.cpp  setup.cpp  setup.h
src/game/commands/: cam_adjust_command.cpp  cam_adjust_command.h  move_command.cpp  move_command.h
src/game/components/: entity.cpp  entity.h  player.cpp  player.h
src/graphics/: mesh.cpp  mesh.h  texture.cpp  texture.h
src/gui/: gui.cpp  gui.h
src/include/commands/: command.h
src/include/math/: matrix.h  quaternion.h  vec.h
src/input/: glfw_input.cpp  glfw_input.h  keyboard_input.cpp  keyboard_input.h  mouse_keyboard_input.cpp  mouse_keyboard_input.h
src/misc/: dirty.h  observer.h  service_locator.h  singleton.h  spaced_span.h  unique_handle.h  utils.cpp  utils.h
src/platform_specific/host/emscripten/: emscripten_constants.h  emscripten_host.cpp  emscripten_input.cpp  emscripten_input.h  shell.html
src/platform_specific/host/glfw/: glfw_host.cpp  glfw_incl.h  glfw_input.cpp  glfw_input.h  glfw_window.cpp  glfw_window.h
src/presentation/: game_bootstrap_info.h  game_host.h  window.h
src/scene_loaders/: gltf_loader.cpp  gltf_loader.h
src/shaders/: cube.vert.sc  cube_frag.sc  cube_vert.sc  imgui_frag.sc  imgui_vert.sc
src/tests/: matrix.test.cpp  spaced_span.test.cpp
